[ADD] Base components

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>React Base</title>
+    <link rel="icon" href="http://resource.intidev.info/inti-purple_black.ico" type="image/ico">
+    <title>Inti Dev</title>
   </head>
   <body>
     <div id="app"></div>
